syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.edu";
option java_outer_classname = "KeyManagerGrpc";
option objc_class_prefix = "HLW";

package br.com.zup.edu;

import 'google/protobuf/timestamp.proto';

service KeyManagerNovoGrpcService {
  rpc cadastrar (NovaChaveRequest) returns (NovaChaveResponse) {}
}

service KeyManagerRemoverGrpcService {
  rpc remover (RemoverChaveRequest) returns (RemoverChaveResponse) {}
}

service KeyManagerConsultaGrpcService {
  rpc consultar (ConsultaChaveRequest) returns (ConsultaChaveResponse) {}
}

service KeyManagerListarGrpcService {
  rpc listar (ListaChaveRequest) returns (ListaChaveResponse) {}
}

// Nova Chave

message NovaChaveRequest {
  string identificador = 1;
  TipoChave tipoChave = 2;
  string valorChave = 3;
  TipoConta tipoConta = 4;
}

message NovaChaveResponse {
  int64 idPix = 1;
}

// Remover Chave
message RemoverChaveRequest {
  int64 idPix = 1;
  string identificador = 2;
}

message RemoverChaveResponse {
  int64 idPix = 1;
}

// Consulta Chave Pix

message ConsultaChaveRequest {
  message FiltroProPixId {
    string identificador = 1;
    int64 idPix = 2;
  }

  oneof filtro {
    FiltroProPixId idPix = 1;
    string chave = 2;
  }
}

message ConsultaChaveResponse {
  message ChavePix {
    message ContaInfo {
      TipoConta tipo = 1;
      string instituicao = 2;
      string nomeDoTitular = 3;
      string cpfDoTitular = 4;
      string agencia = 5;
      string numeroDaConta = 6;
    }

    TipoChave tipo = 1;
    string chave = 2;
    ContaInfo conta = 3;
  }

  string identificador = 1;
  string idPix = 2;
  ChavePix chave = 3;
}

// Listar

message ListaChaveRequest {
  string indentificador = 1;
}

message ListaChaveResponse {
  message chave {
    int64 idPix = 1;
    TipoChave tipoChave = 2;
    string valorChave = 3;
    TipoConta tipoConta = 4;
  }

  string identificador = 1;
  repeated chave chaves = 2;
}

enum TipoConta {
  NULO = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}

enum TipoChave {
  NULLO = 0;
  CPF = 1;
  CELULAR = 2;
  EMAIL = 3;
  CHAVE = 4;
}